fix spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -539,7 +539,7 @@ body.prose-page {
     align-items: flex-end;
     gap: 0.5em;
     padding: 1px 0px;
-    margin: 8px 0;
+    margin: 8px 15px;
     font-size: 1em;
     text-decoration: none;
     color: var(--primary-color);
